--- a/_data/machine_files/A64FX_qpace4.yml
+++ b/_data/machine_files/A64FX_qpace4.yml
@@ -74,8 +74,8 @@ memory hierarchy:
 non-overlapping model:
     performance counter metric: 'INFORMATION_REQUIRED Example:max(UOPS_DISPATCHED_PORT_PORT_0__PMC2,UOPS_DISPATCHED_PORT_PORT_1__PMC3, UOPS_DISPATCHED_PORT_PORT_4__PMC0, UOPS_DISPATCHED_PORT_PORT_5__PMC1)'
     ports:
-      OSACA: []
-      LLVM-MCA: []
+      OSACA: ['5D', '6D']
+      LLVM-MCA: [A64FXIPEAGA, A64FXIPEAGB]
 
 overlapping model: 
     performance counter metric: 'INFORMATION_REQUIRED Example:max(UOPS_DISPATCHED_PORT_PORT_0__PMC2,UOPS_DISPATCHED_PORT_PORT_1__PMC3,    UOPS_DISPATCHED_PORT_PORT_4__PMC0, UOPS_DISPATCHED_PORT_PORT_5__PMC1)'
