improved reporting and updated hosts list

--- a/config/hosts.yml
+++ b/config/hosts.yml
@@ -4,10 +4,11 @@ phinally:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
         - source /etc/profile
-        - module load likwid/5.1-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
+        - module load likwid/5.1.1 intel64/19.0up05 python/3.7-anaconda gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.7 -g performance
         - likwid-features -c N -e HW_PREFETCHER,CL_PREFETCHER,DCU_PREFETCHER,IP_PREFETCHER
+        - export PATH=~/dev/llvm/llvm_build/bin/:$PATH
     machine_filename: SandyBridgeEP_E5-2680.yml 
 
 ivyep1:
@@ -16,10 +17,11 @@ ivyep1:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
         - source /etc/profile
-        - module load likwid/5.1-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
+        - module load likwid/5.1.1 intel64/19.0up05 python/3.7-anaconda gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 3.0 -g performance
         - likwid-features -c N -e HW_PREFETCHER,CL_PREFETCHER,DCU_PREFETCHER,IP_PREFETCHER
+        - export PATH=~/dev/llvm/llvm_build/bin/:$PATH
     machine_filename: IvyBridgeEP_E5-2690v2.yml 
 
 hasep1:
@@ -28,10 +30,11 @@ hasep1:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup: 
         - source /etc/profile
-        - module load likwid/5.1-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
+        - module load likwid/5.1.1 intel64/19.0up05 python/3.7-anaconda gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.3 -g performance --umin 2.3 --umax 2.3
         - likwid-features -c N -e HW_PREFETCHER,CL_PREFETCHER,DCU_PREFETCHER,IP_PREFETCHER
+        - export PATH=~/dev/llvm/llvm_build/bin/:$PATH
     machine_filename: HaswellEP_E5-2695v3_CoD.yml 
 
 broadep2:
@@ -40,10 +43,11 @@ broadep2:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
         - source /etc/profile
-        - module load likwid/5.1-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
+        - module load likwid/5.1.1 intel64/19.0up05 python/3.7-anaconda gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.3 -g performance --umin 2.3 --umax 2.3
         - likwid-features -c N -e HW_PREFETCHER,CL_PREFETCHER,DCU_PREFETCHER,IP_PREFETCHER
+        - export PATH=~/dev/llvm/llvm_build/bin/:$PATH
     machine_filename: BroadwellEP_E5-2697v4_CoD.yml 
 
 skylakesp2:
@@ -52,10 +56,11 @@ skylakesp2:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
         - source /etc/profile
-        - module load likwid/5.1-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
+        - module load likwid/5.1.1 intel64/19.0up05 python/3.7-anaconda gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.4 -g performance --umin 2.4 --umax 2.4
         - likwid-features -c N -e HW_PREFETCHER,CL_PREFETCHER,DCU_PREFETCHER,IP_PREFETCHER
+        - export PATH=~/dev/llvm/llvm_build/bin/:$PATH
     machine_filename: SkylakeSP_Gold-6148_SNC.yml 
 
 casclakesp2:
@@ -64,10 +69,11 @@ casclakesp2:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
         - source /etc/profile
-        - module load likwid/5.1-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
+        - module load likwid/5.1.1 intel64/19.0up05 python/3.7-anaconda gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.5 -g performance --umin 2.5 --umax 2.5
         - likwid-features -c N -e HW_PREFETCHER,CL_PREFETCHER,DCU_PREFETCHER,IP_PREFETCHER
+        - export PATH=~/dev/llvm/llvm_build/bin/:$PATH
     machine_filename: CascadelakeSP_Gold-6248_SNC.yml 
 
 naples1:
@@ -76,9 +82,10 @@ naples1:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
         - source /etc/profile
-        - module load likwid/5.1-dev intel64/19.0up05 python/3.7-anaconda clang/8.0.0 gcc/9.1.0
+        - module load likwid/5.1.1 intel64/19.0up05 python/3.7-anaconda gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.3 -g performance
+        - export PATH=~/dev/llvm/llvm_build/bin/:$PATH
     machine_filename: Zen_EPYC-7451.yml 
 
 rome1:
@@ -87,9 +94,10 @@ rome1:
     slurm_arguments: --partition=lowprio -C hwperf --export=None --time=24:00:00 
     runtime_setup:
         - source /etc/profile
-        - module load likwid/5.1-dev intel64/19.0up05 python/3.7-anaconda gcc/9.1.0 llvm/11.0.0-dolw55
+        - module load likwid/5.1.1 intel64/19.0up05 python/3.7-anaconda gcc/9.1.0
         - source ~/py37/bin/activate
         - likwid-setFrequencies -t 0 -f 2.35 -g performance
+        - export PATH=~/dev/llvm/llvm_build/bin/:$PATH
     machine_filename: Zen2_EPYC-7452.yml
 
 warmup:
@@ -101,6 +109,7 @@ warmup:
         - source ~/.bashrc
         - module load likwid/5.1-dev ThunderX2CN99/Ubuntu/16.04/arm-hpc-compiler-19.2/armpl/19.2.0
         - source ~/py37-warmup/bin/activate
+        - export PATH=/home/hpc/unrz/unrza308/dev/llvm/llvm_build_warmup/bin/:$PATH
     machine_filename: ARMv8_ThunderX2-CN9980.yml 
     ignore_kerncraft_warnings: true
 
